--- a/app/src/main/res/layout/verify_password.xml
+++ b/app/src/main/res/layout/verify_password.xml
@@ -57,7 +57,7 @@
                     android:paddingBottom="20dp"
                     android:text="@{passwordModel.emailData}"
                     android:textAlignment="center"
-                    android:textColor="@color/colorBlue"
+                    android:textColor="@color/colorWhite"
                     android:textSize="18sp"></TextView>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -66,7 +66,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
+                    android:textColorHint="@color/colorWhite"
                     app:errorEnabled="true"
+                    app:hintTextColor="@color/colorWhite"
                     app:passwordToggleEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -74,6 +76,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword"
+                        android:textColor="@color/colorWhite"
+                        android:textColorHint="@color/colorWhite"
                         app:binding="@{passwordModel.passwordUI}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
