--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -3,12 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient_login">
 
     <TextView
         android:id="@+id/text_slideshow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -19,32 +22,43 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="385dp"
-        android:layout_height="723dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="4dp"
         tools:layout_editor_absoluteY="42dp">
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mensajes Publicos" />
+            android:text="Mensajes Públicos"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="30sp" />
 
         <ListView
             android:id="@+id/listPublico"
             android:layout_width="match_parent"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorWhite"
             android:layout_height="248dp" />
 
         <TextView
             android:id="@+id/textView7"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mensajes Privados" />
+            android:text="Mensajes Privados"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorWhite"
+            android:textSize="30sp" />
 
         <ListView
             android:id="@+id/listPrivado"
             android:layout_width="match_parent"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorWhite"
             android:layout_height="269dp" />
     </LinearLayout>
 
