--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -3,50 +3,53 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient_login">
 
-    <TextView
-        android:id="@+id/text_slideshow"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="385dp"
-        android:layout_height="723dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="42dp">
-
-        <TextView
-            android:id="@+id/textView6"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mensajes Publicos" />
+            android:gravity="center"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="4dp"
+            tools:layout_editor_absoluteY="42dp">
 
-        <ListView
-            android:id="@+id/listPublico"
-            android:layout_width="match_parent"
-            android:layout_height="248dp" />
+            <TextView
+                android:id="@+id/text_slideshow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mensajes Públicos"
+                android:textColor="@color/colorWhite"
+                android:textColorHint="@color/colorWhite"
+                android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Mensajes Privados" />
+            <ListView
+                android:id="@+id/listPublico"
+                android:layout_width="match_parent"
+                android:layout_height="340dp"
+                android:textColor="@color/colorWhite"
+                android:textColorHint="@color/colorWhite" />
 
-        <ListView
-            android:id="@+id/listPrivado"
-            android:layout_width="match_parent"
-            android:layout_height="269dp" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mensajes Privados"
+                android:textColor="@color/colorWhite"
+                android:textColorHint="@color/colorWhite"
+                android:textSize="30sp" />
 
+            <ListView
+                android:id="@+id/listPrivado"
+                android:layout_width="match_parent"
+                android:layout_height="269dp"
+                android:textColor="@color/colorWhite"
+                android:textColorHint="@color/colorWhite" />
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
